feat(client): page exam and matrix